# pocketdock

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
changelog/: index.html
cli/: index.html
concepts/architecture/: index.html
concepts/connection-model/: index.html
contributing/: index.html
dev/: status.md
docs/: changelog.md  cli.md  contributing.md  index.md  quickstart.md
docs/concepts/: architecture.md  connection-model.md
docs/guide/: async.md  commands.md  containers.md  files.md  persistence.md  profiles.md  projects.md  sessions.md
docs/reference/: api.md  configuration.md  errors.md  types.md
examples/: README.md  quickstart_sandbox.py  quickstart_webserver.py
guide/async/: index.html
guide/commands/: index.html
guide/containers/: index.html
guide/files/: index.html
guide/persistence/: index.html
guide/profiles/: index.html
guide/projects/: index.html
guide/sessions/: index.html
images/agent/: Dockerfile
images/dev/: Dockerfile
images/minimal-bun/: Dockerfile
images/minimal-node/: Dockerfile
images/minimal-python/: Dockerfile
overrides/: main.html
plan/: acceptance-gates.md  checklist.md  pocket-dock-plan.md  pocketdock-plan.md
python/pocket_dock/: __init__.py  _async_container.py  _buffer.py  _config.py  _helpers.py  _logger.py  _process.py  _session.py  _socket_client.py  _stream.py  _sync_container.py  async_.py  errors.py  persistence.py  profiles.py  projects.py  types.py
python/pocket_dock/cli/: __init__.py  _commands.py  _output.py  main.py
python/pocketdock/: __init__.py  _async_container.py  _buffer.py  _callbacks.py  _config.py  _helpers.py  _logger.py  _process.py  _session.py  _socket_client.py  _sync_container.py  async_.py  errors.py  persistence.py  profiles.py  projects.py  types.py
python/pocketdock/_images/embedded/: Dockerfile
python/pocketdock/_images/minimal-python/: Dockerfile
python/pocketdock/_images/minimal-python/demo/: README.md  index.html  serve.py
python/pocketdock/cli/: _commands.py  _output.py  main.py
quickstart/: index.html
reference/api/: index.html
reference/configuration/: index.html
reference/errors/: index.html
reference/types/: index.html
search/: search_index.json
tests/: conftest.py  test_buffer.py  test_callbacks.py  test_cli_integration.py  test_cli_output.py  test_cli_unit.py  test_concurrent.py  test_config.py  test_container_async.py  test_container_sync.py  test_container_unit.py  test_doctor_unit.py  test_errors.py  test_file_ops_async.py  test_file_ops_sync.py  test_file_ops_unit.py  test_helpers.py  test_import.py  test_info_integration.py  test_install_integration.py  test_logger.py  test_persistence_integration.py  test_persistence_unit.py  test_process_unit.py  test_profiles.py  test_projects.py  test_session_integration.py  test_session_unit.py  test_socket_client.py  test_socket_client_unit.py  test_stream.py  test_streaming_integration.py  test_types.py
