# SPDX-License-Identifier: BSD-2-Clause
# Copyright (c) deftio llc

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pocket-dock"
version = "0.7.0"
description = "Portable, offline-first container sandboxes for LLM agents and dev workflows"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
authors = [{ name = "deftio llc" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
cli = [
    "click",
    "rich",
    "PyYAML",
    "tomli; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "ruff",
    "mypy",
    "bandit[toml]",
    "pre-commit",
    "check-manifest",
    "pip-audit",
    "mkdocs-material",
]

[project.scripts]
pocket-dock = "pocket_dock.cli.main:cli [cli]"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["python/pocket_dock"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",     # don't require docstrings on every function
    "D203",   # conflicts with D211
    "D213",   # conflicts with D212
    "COM812", # conflicts with formatter
    "N818",   # exception names follow spec conventions (ContainerNotFound, not ContainerNotFoundError)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # allow assert in tests
    "S108",    # allow /tmp paths in tests
    "PLC0415", # allow non-top-level imports in tests
    "EM101",   # allow string literals in exceptions in tests
    "PLR2004", # allow magic values in tests
    "SLF001",  # allow private member access in tests
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=pocket_dock --cov-report=term-missing -v --durations=10"

[tool.coverage.run]
branch = true
source = ["pocket_dock"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "@overload",
]
# fail_under is enforced in CI via --cov-fail-under=100

[tool.bandit]
exclude_dirs = ["tests"]
